src/components/Global/Map/styles.scss
.map-wrapper {
  position: relative;

  h3 {
    color: var(--primary-color);
    font-family: var(--primary-font);
    font-size: 49px;
    font-style: normal;
    font-weight: 600;
    line-height: 110%;
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 1;
    top: 53px;
    left: 53px;
  }

  .map {
    filter: drop-shadow(0px 3px 10px rgba(0, 0, 0, 0.15));

    .pre-header {
      display: none;
    }

    .map-container {
      height: 80vh;
      border-radius: 20px;
      margin-bottom: 36px;

      .mapboxgl-popup-content {
        padding: 20px;
        width: 345px;
        border-radius: 10px;
        box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.25);

        a {
          width: 100%;
        }

        .tag {
          text-transform: capitalize;
        }
      }

      .mapboxgl-popup-close-button {
        font-size: 22px;
        color: #141414;
      }
    }
  }
}

@media screen and (max-width: 992px) {
  .map-wrapper {
    display: none;

    &.mobile {
      display: block;
      position: fixed;
      width: 100%;
      height: 100vh;
      top: 80px;
      left: 0;
      z-index: 10;

      .pre-header {
        display: block;
        background: var(--secondary-bg-color);
        border-bottom: 2px solid var(--primary-color);

        .action {
          display: flex;
          align-items: center;
          gap: 10px;
          padding: 15px 0;
          cursor: pointer;

          span {
            font-family: var(--primary-font);
            color: var(--primary-color);
            font-size: 19px;
            font-style: normal;
            font-weight: 600;
            line-height: 120%;
          }
        }
      }

      h3 {
        display: none;
      }

      .map {
        filter: none;

        .map-container {
          height: 100vh;
          width: 100%;
          border-radius: 0;
          margin: 0;

          .mapboxgl-canvas-container canvas {
            width: 100% !important;
          }

          .mapboxgl-popup {
            transform: none !important;
          }

          .mapboxgl-popup-content {
            top: 0;
            left: 0;
            position: fixed;
            width: 100vw;
            height: 90vh;
            border-radius: 0;
            overflow-y: auto;
            padding-bottom: 10rem;

            .mapboxgl-popup-close-button {
              margin: 10px 0;
              font-size: 24px;
            }
          }

          .map-popup {
            margin-top: 1rem;
          }

          .mapboxgl-ctrl-bottom-right {
            bottom: 140px;
          }
        }
      }
    }
  }
}

